--- a/toolkit/app/package.json
+++ b/toolkit/app/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.26.7",
     "nanoid": "^5.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "redux": "^5.0.1"
